--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="qTd3PYXfColyIp_g9IVZ1UpwoNivUqdJfe7yvdvPDno" />
     <!-- linking css file -->
     <link rel="stylesheet" href="css/style.css" >
     <!-- linking title image-->
     <link rel="icon" type="image/x-icon" href="https://open.spotifycdn.com/cdn/images/favicon32.8e66b099.png">
+    
     <script src="https://kit.fontawesome.com/e68e93b675.js" crossorigin="anonymous"></script>
     <title>Spotify - Web Player</title>
 </head>
